# zhikuncode

./: .env.example  .gitignore  ACCEPTANCE_CHECKLIST.md  AUDIT_EXECUTIVE_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MCP能力注册表集成实施文档.md  README.md  README_审查报告.md  README_问题清单分析.md  SPEC.md  SPEC_三向对照审查报告.md  SPEC_全面审查报告.md  Task11-WebSocket实时通信测试报告.md  Task3-工具系统完整功能测试报告.md  Task4-工具系统验证报告.md  Task4-权限治理体系测试报告.md  Task42_执行总结.md  Task5-多Agent协作测试报告.md  Task6-BashTool_8层安全检查测试报告.md  Task7-SystemPrompt工程测试报告.md  Task8-MCP集成测试报告.md  Task9-上下文管理测试报告.md  ZhikuCode_4项P0P1优化修复方案.md  ZhikuCode功能可运行性审查报告.md  ZhikuCode核心功能测试报告.md  ZhikuCode问题修复实施方案.md  ZhikuCode问题修复实施方案_端到端测试.md  claudecode  docker-compose.yml  docker-entrypoint.sh  hareness.md  pipeline.json  prompt优化.md  start.sh  stop.sh  zhixing.md  三向对照审查报告-0407.md  三向对照审查报告.md  (+28 more)
.github/: dependabot.yml
backend/: package-lock.json  package.json  pom.xml  test_tool_write.txt
docs/: Claude-Code-Architecture.html  Claude_Code交叉验证与新架构价值评估.md  Claude_Code源码深度架构分析.md  F40代码路径追踪E2E测试报告.md  Phase1_快速参考.md  Phase1_研究报告.md  Phase1_精确代码规格.md  README_EN.md  Task3-5差异化升级功能测试方案.md  ZhikuCode_90%+对标提升实施计划.md  ZhikuCode_vs_ClaudeCode_功能对标分析报告.md  ZhikuCode功能增强规划文档_v1.md  ZhikuCode核心功能测试报告_v3.md  ZhikuCode遗留问题修复实施方案.md  ZhikuCode问题修复实施文档.md  ZhikunCode-Architecture.html  ZhikunCode-Capability-Overview.html  ZhikunCode-vs-Claude-Code.html  ZhikunCode核心功能测试报告.md  fix-permission-remember.md  index.html  swe-bench-report.html  swe-bench-报告.html  zhikuncode-improvement-implementation.md  审查问题修复实施文档.md
frontend/: .env.development  .env.production  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
prompts/: _CHECKLIST.md  round_01_三项目初始化.md  round_02_数据模型.md  round_03_数据库层.md  round_04_AppState_状态管理.md  round_05_SessionManager_会话管理.md  round_06_LLM_Provider_抽象层.md  round_07_Tool_基础框架.md  round_08_10_个_P0_核心工具.md  round_09_权限管线.md  round_10_QueryEngine_核心循环.md  round_11_CommandRegistry_命令系统.md  round_12_REST_API.md  round_13_WebSocket_STOMP.md  round_14_安全认证.md  round_15_集成测试.md  round_16_TypeScript_类型_+_Zustand_Store.md  round_17_STOMP_客户端_+_dispatch.md  round_18_MessageList_+_渲染器.md  round_19_PromptInput_+_对话框组件.md  round_20_响应式布局_+_主题系统.md  round_21_BashParser_EBNF_语法_+_AST_定义.md  round_22_BashParser_Lexer.md  round_23_BashParser_Parser_核心.md  round_24_BashParser_复合结构.md  round_25_BashParser_安全分析_-_parseForSecurity.md  round_26_BashParser_安全分析_-_checkSemantics.md  round_27_BashParser_与权限系统集成.md  round_28_BashParser_50_条黄金测试.md  round_29_AgentTool_子代理系统.md  round_30_Task_工具集.md  round_31_用户交互工具.md  round_32_配置与消息工具.md  round_33_MCP_集成.md  round_34_LSPTool.md  round_35_增强命令_(59_个).md  round_36_Skill_系统.md  round_37_插件系统.md  round_38_IDE_桥接系统.md  round_39_权限系统增强.md  (+4 more)
python-service/: pyproject.toml  requirements.txt
python-service/cli/: client.py  main.py  session.py
python-service/src/: capabilities.py  main.py
python-service/src/analyzers/: __init__.py  call_graph_builder.py  change_impact_analyzer.py  code_path_tracer.py  diagram_models.py  flow_chart_generator.py  sequence_diagram_generator.py
python-service/src/routers/: analysis.py  browser.py  code_intel.py  code_quality.py  file_processing.py  git_enhanced.py  http_api.py  journey.py  token_estimator.py  tokenizer.py
python-service/src/services/: browser_models.py  browser_service.py  complexity_analyzer.py  file_detector.py  git_enhanced_service.py  journey_models.py  tree_sitter_service.py
python-service/tests/: conftest.py  test_analyzer_bfs.py  test_analyzer_callgraph.py  test_analyzer_empty.py  test_browser_automation.py  test_capabilities.py  test_change_impact_contract.py  test_cli_permission_modes.py  test_file_processing.py  test_http_api.py  test_main.py  test_token_estimation.py
python-service/tests/fixtures/: __init__.py  coordinator_multi_agent.py
python-service/tests/fixtures/snapshot_pages/: __init__.py  _generate_large_page.py  basic.html  large_page_10k.html
scripts/: archive-logs.sh  check-deps.sh  cross-module-regression.sh  gen_prompts.py  restart.sh  run_pipeline.sh  split_spec.py  task3-5-precheck.sh  verify_all_preds.py
spec_sections/: INDEX.json  ch00_changelog.md  ch01_项目概述.md  ch05_数据模型.md  ch07_数据库设计.md  ch09_安全设计.md  ch10_部署方案.md  ch11_开发路线图.md  ch12_附录.md
(+2441 files in other folders)
