[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-code-assistant"
version = "1.15.0"
description = "AI Code Assistant — Python Service + CLI"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
cli = [
    "typer[all]>=0.9.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "rich>=13.0.0",
]
code-intel = [
    "tree-sitter>=0.22.0",
    "tree-sitter-languages>=1.10.0",
    "rope>=1.13.0",
    "jedi>=0.19.0",
]
file-processing = [
    "chardet>=5.2.0",
    "python-magic>=0.4.27",
    "watchfiles>=1.0.0",
]
full = [
    "ai-code-assistant[cli,code-intel,file-processing]",
]

[project.scripts]
aica = "cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "cli*"]
