[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zhikuncode-python-service"
version = "1.0.0"
description = "Python analysis service for ZhikunCode"
license = {text = "MIT"}
authors = [{name = "ZhikunCode Team"}]
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
cli = [
    "typer[all]>=0.9.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "rich>=13.0.0",
]
code-intel = [
    "tree-sitter>=0.21.0,<0.22.0",
    "tree-sitter-languages>=1.10.0,<2.0.0",
    "rope>=1.13.0",
    "jedi>=0.19.0",
]
file-processing = [
    "chardet>=5.2.0",
    "python-magic>=0.4.27",
    "watchfiles>=1.0.0",
]
code-quality = [
    "radon>=6.0.1",
    "pygount>=1.8.0",
]
analysis = [
    "libcst>=1.1.0",
    "networkx>=3.2",
    "httpx>=0.27.0",
]
full = [
    "zhikuncode-python-service[cli,code-intel,file-processing,code-quality,analysis]",
]

[project.scripts]
aica = "cli.main:app"

[project.urls]
Homepage = "https://github.com/zhikuncode/zhikuncode"
Repository = "https://github.com/zhikuncode/zhikuncode"
Issues = "https://github.com/zhikuncode/zhikuncode/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "cli*"]
